# r2t

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
containers/: Dockerfile
docs/: example-settings.yaml
kubernetes/: deployment.yaml  example-configmap.yaml  example-pvc.yaml  example-secret.yaml
src/r2t/: __init__.py  api.py  cli.py  config.py  db.py  feedparser.py  logger.py  requirements.txt  rtt  server.py
